--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,15 @@
     <uses-permission
         android:name="android.permission.UPDATE_DEVICE_STATS"
         tools:ignore="ProtectedPermissions" />
+    <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission
         android:name="android.permission.BIND_DEVICE_ADMIN"
         tools:ignore="ProtectedPermissions" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    <uses-permission android:name="android.permission.GET_TASKS"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
         android:name=".res.UserSettings"
@@ -35,6 +39,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:launchMode="singleTask"
+            android:permission="android.permission.WRITE_SECURE_SETTINGS"
             android:showWhenLocked="false">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -50,6 +55,18 @@
             android:launchMode="singleTask"
             android:showWhenLocked="true" >
         </activity>
+
+        <service android:name=".KioskService" android:exported="false"/>
+
+        <service android:name=".UntisViewKeyboard"
+            android:label="@string/app_name"
+            android:permission="android.permission.BIND_INPUT_METHOD"
+            android:exported="true">
+            <meta-data android:name="android.view.im" android:resource="@xml/method"/>
+            <intent-filter>
+                <action android:name="android.view.InputMethod" />
+            </intent-filter>
+        </service>
 
         <receiver
             android:name=".res.DeviceAdmin"
